# OzonLayer-scraper

./: CHANGELOG.md  README.md  ozonlayer_default.toml  pyproject.toml  shell.nix  test.py
src/ozonlayer_scraper/: __init__.py  config.py  config_loader.py
utils/: collect_product_data.py  config.py  load_in_excel.py  prepare_work.py  product_data.py  scroll.py  write_products_urls_in_file.py
